# mini_laska

./: CMakeLists.txt  README.md  functions.c  game_logic.c  game_logic.h  main.c  mini_laska.c  mini_laska.h  prototipi.h
graphics/: graphics.c  graphics.h
librerie/: dynamic_vet.c  dynamic_vet.h
librerie/generic_dynamic_vet/: dynarr.c  dynarr.h
utility/: utility.c  utility.h
